updated swagger and component autocomplete gtin search full product name
